# iras-scraper-v1

./: .env.example  .env.speed  .gitignore  PROJECT_ORGANIZATION.md  README.md  debug_enhanced_recaptcha.py  debug_recaptcha.py  pyproject.toml  sample_input_template.xlsx  setup_offline_environment.sh  uv.toml.example
.github/: copilot-instructions.md
distribution/: README.md
docs/: DISTRIBUTION_README.md  MANUAL_WEBDRIVER_SETUP.md  PACKAGE_USAGE_GUIDE.md  README.md  SPEED_OPTIMIZATION_SUMMARY.md  TESTING_GUIDE.md  UV_OFFLINE_SETUP.md
examples/: quick_start.py
iras_scraper/: __init__.py  config.py  excel_handler.py  main.py  scraper.py
scripts/: README.md  build.sh  install.sh
tests/: conftest.py
